Divided ArraySizeProblem into 2 discrete classes.

--- a/hibiscus/src/main/resources/com/github/i49/hibiscus/schema/problems/messages.properties
+++ b/hibiscus/src/main/resources/com/github/i49/hibiscus/schema/problems/messages.properties
@@ -1,9 +1,15 @@
-# messages for problems 
+# Messages for problems
+# Note that each problem can have only one message. 
+# Each entry has format:
 # <problem class> = <message>
-TypeMismatchProblem=Instance type {0} does not match any expected type in {1}.
+TypeMismatchProblem=Instance type {0} does not match any expected type of {1}.
+UnknownValueProblem=Value {0} is not expected. Allowed value is one of {1}. 
+
+ArrayTooShortProblem=Array composed of {0} elements is too short. It must have at least {1} elements.
+ArrayTooLongProblem=Array composed of {0} elements is too long. It must have at most {1} elements.
+
 MissingPropertyProblem=Property \"{0}\" is required.
 UnknownPropertyProblem=Property \"{0}\" is not allowed.
-UnknownValueProblem=Value {0} is not expected. Allowed value is one of {1}. 
 
 StringPatternProblem=String value \"{0}\" does not match expected pattern.
 
