Divided StringLengthProblem into 2 discrete classes.

--- a/hibiscus/src/main/resources/com/github/i49/hibiscus/schema/problems/messages.properties
+++ b/hibiscus/src/main/resources/com/github/i49/hibiscus/schema/problems/messages.properties
@@ -3,7 +3,7 @@
 # Each entry has format:
 # <problem class> = <message>
 TypeMismatchProblem=Instance type {0} does not match any expected type of {1}.
-UnknownValueProblem=Value {0} is not expected. Allowed value is one of {1}. 
+UnknownValueProblem=Value {0} is not expected. The value must be one of [{1}]. 
 
 ArrayTooShortProblem=Array composed of {0} elements is too short. It must have at least {1} elements.
 ArrayTooLongProblem=Array composed of {0} elements is too long. It must have at most {1} elements.
@@ -11,6 +11,8 @@ ArrayTooLongProblem=Array composed of {0} elements is too long. It must have at 
 MissingPropertyProblem=Property \"{0}\" is required.
 UnknownPropertyProblem=Property \"{0}\" is not allowed.
 
+StringTooShortProblem=String has {0} characters and it''s too short. It must have at least {1} characters.
+StringTooLongProblem=String has {0} characters and it''s too long. It must have at most {1} characters.
 StringPatternProblem=String value \"{0}\" does not match expected pattern.
 
 LessThanMinimumProblem=Numeric value {0} is less than the expected minimum {1}.
