--- a/hibiscus/src/main/resources/com/github/i49/hibiscus/schema/problems/messages.properties
+++ b/hibiscus/src/main/resources/com/github/i49/hibiscus/schema/problems/messages.properties
@@ -1,21 +1,20 @@
-# Messages for problems
+# Messages for problems found by JSON validator.
 # Note that each problem can have only one message. 
-# Each entry has format:
-# <problem class> = <message>
-TypeMismatchProblem=Instance type {0} does not match any expected type of {1}.
-UnknownValueProblem=Value {0} is not expected. The value must be one of [{1}]. 
+# Each entry has format: <name of problem class> = <message>
+TypeMismatchProblem=Value has wrong type {0}. Allowed types are: {1}.
+UnknownValueProblem=Value {0} is not allowed. Allowed values are: {1}. 
 
-ArrayTooShortProblem=Array composed of {0} elements is too short. It must have at least {1} elements.
-ArrayTooLongProblem=Array composed of {0} elements is too long. It must have at most {1} elements.
+ArrayTooShortProblem=Array has {0} elements and is too short. It must have at least {1} elements.
+ArrayTooLongProblem=Array has {0} elements and is too long. It must have at most {1} elements.
 
-MissingPropertyProblem=Property \"{0}\" is required.
-UnknownPropertyProblem=Property \"{0}\" is not allowed.
+MissingPropertyProblem=Object must have property \"{0}\".
+UnknownPropertyProblem=Object has unknown property \"{0}\".
 
-StringTooShortProblem=String has {0} characters and it''s too short. It must have at least {1} characters.
-StringTooLongProblem=String has {0} characters and it''s too long. It must have at most {1} characters.
+StringTooShortProblem=String has {0} characters and is too short. It must have at least {1} characters.
+StringTooLongProblem=String has {0} characters and is long. It must have at most {1} characters.
 StringPatternProblem=String value \"{0}\" does not match expected pattern.
 
-LessThanMinimumProblem=Numeric value {0} is less than the expected minimum {1}.
-MoreThanMaximumProblem=Numeric value {0} is greater than the expected maximum {1}.
-NotMoreThanMinimumProblem=Numeric value {0} is not greater than the exclusive minimum {1}.
-NotLessThanMaximumProblem=Numeric value {0} is not less than the exclusive maximum {1}.
+LessThanMinimumProblem=Numeric value {0} is too small. It must be greater than or equal to {1}.
+MoreThanMaximumProblem=Numeric value {0} is too large. It must be less than or equal to {1}.
+NotMoreThanMinimumProblem=Numeric value {0} is too small. It must be greater than {1}.
+NotLessThanMaximumProblem=Numeric value {0} is too large. It must be less than {1}.
