Revised message of TypeMismatchProblem.

--- a/hibiscus/src/main/resources/com/github/i49/hibiscus/schema/problems/messages.properties
+++ b/hibiscus/src/main/resources/com/github/i49/hibiscus/schema/problems/messages.properties
@@ -1,7 +1,7 @@
 # Messages for problems found by JSON validator.
 # Note that each problem can have only one message. 
 # Each entry has format: <name of problem class> = <message>
-TypeMismatchProblem=Value has wrong type {0}. Allowed types are: {1}.
+TypeMismatchProblem=Value is of wrong type {0}. Allowed types are: {1}.
 UnknownValueProblem=Value {0} is not allowed. Allowed values are: {1}. 
 
 ArrayTooShortProblem=Array has {0} elements and is too short. It must have at least {1} elements.
