Deleted default value types.

--- a/hibiscus/src/main/resources/com/github/i49/hibiscus/schema/messages.properties
+++ b/hibiscus/src/main/resources/com/github/i49/hibiscus/schema/messages.properties
@@ -1,2 +1,3 @@
 PROPERTY_NAME_IS_NULL=Property name is null.
-PROPERTY_TYPE_IS_NULL=Property type at the index of {0} is null.
+ONE_OF_TYPES_IS_NULL=Type at the index of {0} is null.
+ONE_OF_TYPES_IS_DUPLICATED=Type "{1}" at the index of {0} is duplicated.
