--- a/hibiscus/src/main/resources/com/github/i49/hibiscus/schema/messages.properties
+++ b/hibiscus/src/main/resources/com/github/i49/hibiscus/schema/messages.properties
@@ -1,5 +1,7 @@
 # Messages for exceptions that will occur while building schema. 
 METHOD_PARAMETER_IS_NULL=null was passed to parameter \"{1}\" of method \"{0}\". 
+PROPERTY_IS_NULL=Object property specified at the index of {0} is null.
+ARRAY_SIZE_IS_NEGATIVE=Negative value {0} was specified as array size.
 PROPERTY_NAME_IS_NULL=Property name is null.
 ONE_OF_TYPES_IS_NULL=Type at the index of {0} is null.
 ONE_OF_TYPES_IS_DUPLICATED=Type "{1}" at the index of {0} is duplicated.
