--- a/hibiscus/src/main/resources/com/github/i49/hibiscus/problems/messages.properties
+++ b/hibiscus/src/main/resources/com/github/i49/hibiscus/problems/messages.properties
@@ -1,20 +1,23 @@
 # Messages for problems found by JSON validator.
 # Note that each problem can have only one message. 
-# Each entry has format: <name of problem class> = <message>
-TypeMismatchProblem=Value is of wrong type {0}. Allowed types are: {1}.
-UnknownValueProblem=Value {0} is not allowed. Allowed values are: {1}. 
+# Each entry has format: <name of problem> = <message>
 
-ArrayTooShortProblem=Array has {0} elements and is too short. It must have at least {1} elements.
-ArrayTooLongProblem=Array has {0} elements and is too long. It must have at most {1} elements.
+type="{0}"
 
-MissingPropertyProblem=Object must have property \"{0}\".
-UnknownPropertyProblem=Object has unknown property \"{0}\".
+TYPE_MISMATCH=Value is of wrong type {0}. Allowed types are: {1}.
+UNKNOWN_VALUE=Value {0} is not allowed. Allowed values are: {1}. 
 
-StringTooShortProblem=String has {0} characters and is too short. It must have at least {1} characters.
-StringTooLongProblem=String has {0} characters and is long. It must have at most {1} characters.
-StringPatternProblem=String value \"{0}\" does not match expected pattern.
+ARRAY_TOO_LONG=Array has {0} elements and is too long. It must have at most {1} elements.
+ARRAY_TOO_SHORT=Array has {0} elements and is too short. It must have at least {1} elements.
 
-LessThanMinimumProblem=Numeric value {0} is too small. It must be greater than or equal to {1}.
-MoreThanMaximumProblem=Numeric value {0} is too large. It must be less than or equal to {1}.
-NotMoreThanMinimumProblem=Numeric value {0} is too small. It must be greater than {1}.
-NotLessThanMaximumProblem=Numeric value {0} is too large. It must be less than {1}.
+MISSING_PROPERTY=Object must have property \"{0}\".
+UNKNOWN_PROPERTY=Object has unknown property \"{0}\".
+
+STRING_TOO_LONG=String has {0} characters and is too long. It must have at most {1} characters.
+STRING_TOO_SHORT=String has {0} characters and is too short. It must have at least {1} characters.
+STRING_PATTERN=String value \"{0}\" does not match expected pattern.
+
+LESS_THAN_MINIMUM=Numeric value {0} is too small. It must be greater than or equal to {1}.
+MORE_THAN_MAXIMUM=Numeric value {0} is too large. It must be less than or equal to {1}.
+NOT_MORE_THAN_MINIMUM=Numeric value {0} is too small. It must be greater than {1}.
+NOT_LESS_THAN_MAXIMUM=Numeric value {0} is too large. It must be less than {1}.
