--- a/hibiscus/src/main/resources/com/github/i49/hibiscus/problems/messages.properties
+++ b/hibiscus/src/main/resources/com/github/i49/hibiscus/problems/messages.properties
@@ -3,6 +3,14 @@
 # Each entry has format: <name of problem> = <message>
 
 type="{0}"
+type.set=[{0}]
+type.separator=,\u0020
+
+value={0}
+value.set=[{0}]
+value.separator=,\u0020
+
+# Problems
 
 TYPE_MISMATCH=Value is of wrong type {0}. Allowed types are: {1}.
 UNKNOWN_VALUE=Value {0} is not allowed. Allowed values are: {1}. 
@@ -15,7 +23,7 @@ UNKNOWN_PROPERTY=Object has unknown property \"{0}\".
 
 STRING_TOO_LONG=String has {0} characters and is too long. It must have at most {1} characters.
 STRING_TOO_SHORT=String has {0} characters and is too short. It must have at least {1} characters.
-STRING_PATTERN=String value \"{0}\" does not match expected pattern.
+STRING_PATTERN=String value {0} does not match expected pattern.
 
 LESS_THAN_MINIMUM=Numeric value {0} is too small. It must be greater than or equal to {1}.
 MORE_THAN_MAXIMUM=Numeric value {0} is too large. It must be less than or equal to {1}.
