Changed method name JsonTypes.nullValue() to nil().

--- a/hibiscus/src/main/resources/com/github/i49/hibiscus/problems/messages.properties
+++ b/hibiscus/src/main/resources/com/github/i49/hibiscus/problems/messages.properties
@@ -2,7 +2,7 @@
 # Note that each problem can have only one message. 
 # Each entry has format: <name of problem> = <message>
 
-type="{0}"
+type=<{0}>
 type.set=[{0}]
 type.separator=,\u0020
 
