Divided getMessage() and getDescription() methods of Problem class.

--- a/hibiscus/src/main/resources/com/github/i49/hibiscus/problems/messages.properties
+++ b/hibiscus/src/main/resources/com/github/i49/hibiscus/problems/messages.properties
@@ -2,6 +2,10 @@
 # Note that each problem can have only one message. 
 # Each entry has format: <name of problem> = <message>
 
+problem.message={0}: {1}
+problem.location=Line {0}, column {1}
+problem.location.unknown=(unknown)
+
 type=<{0}>
 type.set=[{0}]
 type.separator=,\u0020
