Added length facet to string JSON type.

--- a/hibiscus/src/main/resources/com/github/i49/hibiscus/problems/messages.properties
+++ b/hibiscus/src/main/resources/com/github/i49/hibiscus/problems/messages.properties
@@ -25,6 +25,7 @@ ARRAY_TOO_SHORT=Array has {0} elements and is too short. It must have at least {
 MISSING_PROPERTY=Object must have property \"{0}\".
 UNKNOWN_PROPERTY=Object has unknown property \"{0}\".
 
+STRING_LENGTH=String has {0} characters. It must have exactly {1} characters.
 STRING_TOO_LONG=String has {0} characters and is too long. It must have at most {1} characters.
 STRING_TOO_SHORT=String has {0} characters and is too short. It must have at least {1} characters.
 STRING_PATTERN=String value {0} does not match expected pattern.
