Added size() constraint to array type.

--- a/hibiscus/src/main/resources/com/github/i49/hibiscus/problems/messages.properties
+++ b/hibiscus/src/main/resources/com/github/i49/hibiscus/problems/messages.properties
@@ -19,6 +19,7 @@ value.separator=,\u0020
 TYPE_MISMATCH=Value is of wrong type {0}. Allowed types are: {1}.
 UNKNOWN_VALUE=Value {0} is not allowed. Allowed values are: {1}. 
 
+ARRAY_SIZE=Array has {0} elements. It must have exactly {1} elements.
 ARRAY_TOO_LONG=Array has {0} elements and is too long. It must have at most {1} elements.
 ARRAY_TOO_SHORT=Array has {0} elements and is too short. It must have at least {1} elements.
 
