Added unique() facet to array type.

--- a/hibiscus/src/main/resources/com/github/i49/hibiscus/problems/messages.properties
+++ b/hibiscus/src/main/resources/com/github/i49/hibiscus/problems/messages.properties
@@ -22,6 +22,7 @@ UNKNOWN_VALUE=Value {0} is not allowed. Allowed values are: {1}.
 ARRAY_LENGTH=Array has {0} elements. It must have exactly {1} elements.
 ARRAY_TOO_LONG=Array has {0} elements and is too long. It must have at most {1} elements.
 ARRAY_TOO_SHORT=Array has {0} elements and is too short. It must have at least {1} elements.
+DUPLICATE_ITEM=Array has a duplicate element {1} at index of {0}.
 
 MISSING_PROPERTY=Object must have property \"{0}\".
 UNKNOWN_PROPERTY=Object has unknown property \"{0}\".
