--- a/hibiscus/src/main/resources/com/github/i49/hibiscus/problems/messages.properties
+++ b/hibiscus/src/main/resources/com/github/i49/hibiscus/problems/messages.properties
@@ -16,23 +16,23 @@ value.separator=,\u0020
 
 # Problems
 
-TYPE_MISMATCH=Value is of wrong type {0}. Allowed types are: {1}.
-UNKNOWN_VALUE=Value {0} is not allowed. Allowed values are: {1}. 
+TYPE_MISMATCH_PROBLEM=Value is of wrong type {0}. Allowed types are: {1}.
+UNKNOWN_VALUE_PROBLEM=Value {0} is not allowed. Allowed values are: {1}. 
 
-ARRAY_LENGTH=Array has {0} elements. It must have exactly {1} elements.
-ARRAY_TOO_LONG=Array has {0} elements and is too long. It must have at most {1} elements.
-ARRAY_TOO_SHORT=Array has {0} elements and is too short. It must have at least {1} elements.
-DUPLICATE_ITEM=Array has a duplicate element {1} at index of {0}.
+ARRAY_LENGTH_PROBLEM=Array has {0} elements. It must have exactly {1} elements.
+ARRAY_TOO_LONG_PROBLEM=Array has {0} elements and is too long. It must have at most {1} elements.
+ARRAY_TOO_SHORT_PROBLEM=Array has {0} elements and is too short. It must have at least {1} elements.
+DUPLICATE_ITEM_PROBLEM=Array has a duplicate element {1} at index of {0}.
 
-MISSING_PROPERTY=Object must have property \"{0}\".
-UNKNOWN_PROPERTY=Object has unknown property \"{0}\".
+MISSING_PROPERTY_PROBLEM=Object must have property \"{0}\".
+UNKNOWN_PROPERTY_PROBLEM=Object has unknown property \"{0}\".
 
-STRING_LENGTH=String has {0} characters. It must have exactly {1} characters.
-STRING_TOO_LONG=String has {0} characters and is too long. It must have at most {1} characters.
-STRING_TOO_SHORT=String has {0} characters and is too short. It must have at least {1} characters.
-STRING_PATTERN=String value {0} does not match expected pattern.
+STRING_LENGTH_PROBLEM=String has {0} characters. It must have exactly {1} characters.
+STRING_TOO_LONG_PROBLEM=String has {0} characters and is too long. It must have at most {1} characters.
+STRING_TOO_SHORT_PROBLEM=String has {0} characters and is too short. It must have at least {1} characters.
+STRING_PATTERN_PROBLEM=String value {0} does not match expected pattern.
 
-LESS_THAN_MINIMUM=Numeric value {0} is too small. It must be greater than or equal to {1}.
-MORE_THAN_MAXIMUM=Numeric value {0} is too large. It must be less than or equal to {1}.
-NOT_MORE_THAN_MINIMUM=Numeric value {0} is too small. It must be greater than {1}.
-NOT_LESS_THAN_MAXIMUM=Numeric value {0} is too large. It must be less than {1}.
+LESS_THAN_MINIMUM_PROBLEM=Numeric value {0} is too small. It must be greater than or equal to {1}.
+MORE_THAN_MAXIMUM_PROBLEM=Numeric value {0} is too large. It must be less than or equal to {1}.
+NOT_MORE_THAN_MINIMUM_PROBLEM=Numeric value {0} is too small. It must be greater than {1}.
+NOT_LESS_THAN_MAXIMUM_PROBLEM=Numeric value {0} is too large. It must be less than {1}.
