--- a/hibiscus/src/main/resources/com/github/i49/hibiscus/schema/messages.properties
+++ b/hibiscus/src/main/resources/com/github/i49/hibiscus/schema/messages.properties
@@ -6,4 +6,5 @@ PROPERTY_NAME_IS_NULL=Property name is null.
 ONE_OF_TYPES_IS_NULL=Type at the index of {0} is null.
 ONE_OF_TYPES_IS_DUPLICATED=Type "{1}" at the index of {0} is duplicated.
 ONE_OF_VALUES_IS_NULL=Value at the index of {0} is null.
+ONE_OF_FORMAT_IS_NULL=Format at the index of {0} is null.
 STRING_LENGTH_IS_NEGATIVE=Negative value {0} was specified as string length.
