Added problem message for format error.

--- a/hibiscus/src/main/resources/com/github/i49/hibiscus/problems/messages.properties
+++ b/hibiscus/src/main/resources/com/github/i49/hibiscus/problems/messages.properties
@@ -7,12 +7,14 @@ problem.location=Line {0}, column {1}
 problem.location.unknown=(unknown)
 
 type=<{0}>
-type.set=[{0}]
-type.separator=,\u0020
-
 value={0}
-value.set=[{0}]
-value.separator=,\u0020
+format={0}
+empty=(none)
+
+list.open=
+list.close=
+list.separator=,\u0020
+list.separator.last=\u0020or\u0020
 
 # Problems
 
@@ -36,3 +38,5 @@ LESS_THAN_MINIMUM_PROBLEM=Numeric value {0} is too small. It must be greater tha
 MORE_THAN_MAXIMUM_PROBLEM=Numeric value {0} is too large. It must be less than or equal to {1}.
 NOT_MORE_THAN_MINIMUM_PROBLEM=Numeric value {0} is too small. It must be greater than {1}.
 NOT_LESS_THAN_MAXIMUM_PROBLEM=Numeric value {0} is too large. It must be less than {1}.
+
+INVALID_FORMAT_PROBLEM=Invalid format. The value {0} does not match the format of {1}. 
