Added text for basic types in schema to resource bundle.

--- a/hibiscus/src/main/resources/com/github/i49/hibiscus/problems/messages.properties
+++ b/hibiscus/src/main/resources/com/github/i49/hibiscus/problems/messages.properties
@@ -1,22 +1,27 @@
-# Messages for problems found by JSON validator.
-# Note that each problem can have only one message. 
-# Each entry has format: <name of problem> = <message>
+# Basic constructs of problem messages.
 
 problem.message={0}: {1}
 problem.location=Line {0}, column {1}
 problem.location.unknown=(unknown)
 
-type=<{0}>
-value={0}
-format={0}
-empty=(none)
-
 list.open=
 list.close=
 list.separator=,\u0020
 list.separator.last=\u0020or\u0020
+list.empty=(empty)
 
-# Problems
+# Basic types in schema.
+ARRAY=array
+BOOLEAN=boolean
+INTEGER=integer
+NULL=null
+NUMBER=number
+OBJECT=object
+STRING=string
+
+# Problem descriptions.
+# Note that each problem can have only one description text. 
+# Each entry has format: <name of problem> = <description>
 
 TYPE_MISMATCH_PROBLEM=Value is of wrong type {0}. Allowed types are: {1}.
 UNKNOWN_VALUE_PROBLEM=Value {0} is not allowed. Allowed values are: {1}. 
