--- a/hibiscus/src/main/resources/com/github/i49/hibiscus/formats/messages_ja.properties
+++ b/hibiscus/src/main/resources/com/github/i49/hibiscus/formats/messages_ja.properties
@@ -7,3 +7,5 @@ ipv6=IPv6\u30a2\u30c9\u30ec\u30b9
 anyURI=URI
 absoluteURI=\u7d76\u5bfeURI
 datetime=\u65e5\u6642
+host=\u30db\u30b9\u30c8
+hostport=\u30db\u30b9\u30c8\u3068\u30DD\u30FC\u30C8\u756A\u53F7
