--- a/hibiscus/src/main/resources/com/github/i49/hibiscus/schema/internal/messages.properties
+++ b/hibiscus/src/main/resources/com/github/i49/hibiscus/schema/internal/messages.properties
@@ -3,6 +3,8 @@ METHOD_PARAMETER_IS_NULL=null was passed to parameter \"{1}\" of method \"{0}\".
 PROPERTY_IS_NULL=Object property specified at the index of {0} is null.
 ARRAY_SIZE_IS_NEGATIVE=Negative value {0} was specified as array size.
 PROPERTY_NAME_IS_NULL=Property name is null.
+REGULAR_EXPRESSION_IS_NULL=Regular expression is null.
+PREDICATE_IS_NULL=Predicate is null.
 ONE_OF_TYPES_IS_NULL=Type at the index of {0} is null.
 ONE_OF_TYPES_IS_DUPLICATED=Type "{1}" at the index of {0} is duplicated.
 ONE_OF_VALUES_IS_NULL=Value at the index of {0} is null.
